--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -1,10 +1,12 @@
 ---
-title: Hello, I’m Thomas Derleth.
+title: Hello, I'm Thomas Derleth.
 slug: '/about'
 ---
 
 I like to read, hear, talk, think, and write about technologies and products. I love building all kinds of things on the internet.
 
-I live in Stuttgart, Germany. In 2015, I graduated with a B.Sc. degree in Media and Information Engineering and Design and finished my M.Sc. degree in Computer Science and Media in late 2017. After my studies, I joined [moovel](https://www.moovel.com/en), an urban mobility company, that aims to make cities smarter. Currently, I am working as an Engineering Lead at [Mobimeo](https://mobimeo.com/en/), building microservices with Node.js written in TypeScript and deployed on AWS. My credo is product-driven engineering that solves real-world problems, which helps me to focus on what matters most every day. If you're interested in a more formal _"about"_, you can view my resume over [here](https://thomasderleth.de/files/curriculum-vitae.pdf).
+Based in Stuttgart, Germany, I earned my B.Sc. in Media and Information Engineering and Design in 2015, followed by completing my M.Sc. in Computer Science and Media in late 2017. Post my academic pursuits, I embarked on a journey with [moovel](https://www.moovel.com/en), an urban mobility company committed to make cities smarter. Presently, I serve as an Engineering Lead at [Mobimeo](https://mobimeo.com/en/), specializing in building microservices utilizing Node.js in TypeScript, deployed on AWS.
 
-I am always open to new technologies and methods as well as side projects and new challenges that improve my work. Contact me at [thomas.derleth@me.com](mailto:thomas.derleth@me.com).
+My approach centers on product-centric engineering aimed at tackling real-world issues. This ethos guides my daily focus, emphasizing solutions that truly matter. For a more formal overview, my resume is accessible [here](https://thomasderleth.de/files/curriculum-vitae.pdf).
+
+I am always open to new technologies and methods as well as side projects and new challenges that improve my work. Feel free to reach out at [thomas.derleth@me.com](mailto:thomas.derleth@me.com).
